# otel-python

./: app.py  client.py  pyproject.toml
lib/: otel.py
